# gmlib

./: .clang-format  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  DoxyfileDevAPI  DoxyfileUsrAPI  GMlib.pro  INSTALL  Makefile  RELEASE  gmlib.pri  gmlib_cpp.pri  gmlib_doc.pri  makeconf.mak  makeconf_custome_rules.mak  qmake.pro
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/benchmarks/: CMakeLists.txt
modules/core/src/: CMakeLists.txt  gmglobal.h
modules/core/tests/: CMakeLists.txt  staticproc_tests.cc
modules/opengl/: CMakeLists.txt
modules/opengl/src/: CMakeLists.txt  gmbufferobject.h  gmframebufferobject.h  gmglobject.h  gmopengl.h  gmopenglmanager.cpp  gmopenglmanager.h  gmprogram.cpp  gmprogram.h  gmprogrampipeline.cpp  gmprogrampipeline.h  gmrenderbufferobject.h  gmshader.cpp  gmshader.h  gmtexture.cpp  gmtexture.h
modules/parametrics/: CMakeLists.txt
modules/parametrics/benchmarks/: CMakeLists.txt  deCasteljau.cc
modules/parametrics/src/: CMakeLists.txt  gmparametrics.c  gmparametrics.h  gmpcurve.c  gmpcurve.h  gmppolygon.c  gmppolygon.h  gmpsurf.c  gmpsurf.h  gmptriangle.c  gmptriangle.h
modules/parametrics/tests/: CMakeLists.txt  curves_compiletest.cc
modules/scene/: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt.back  gmAffineSpace  gmAffineSpace.c  gmAffineSpace.h  gmAngle  gmAngle.c  gmAngle.h  gmArray.c  gmArray.h  gmArrayLX  gmArrayLX.h  gmArrayT.c  gmArrayT.h  gmArrow3D  gmArrow3D.c  gmBFBSEvaluator  gmBasisEvaluator.c  gmCamera.c  gmCamera.cpp  gmCamera.h  gmCameraIso.c  gmCameraIso.cpp  gmCameraIso.h  gmCodeExample  gmCodeExample.cpp  gmCodeExample.h  gmColor.c  gmColor.h  gmContainer  gmCoordinateSystem.cpp  gmCore  gmDCurve  gmDCurve.c  gmDCurve.h  gmDMatrix  gmDMatrix.c  gmDMatrix.h  gmDPApple  gmDPApple.c  (+414 more)
src/container/: gmArray  gmArrayLX.c  gmArrayT  gmArrayT.h  gmContainer  gmDVector.h  gmDVectorN  gmDVectorN.c  gmSArray  gmSArray.h
src/core/: CMakeLists.txt  gmMatrix_SqMatrix.c  gmPoint2D  gmPoint2D_UnitVector2D.c  gmPoint3D  gmPoint3D.h  gmPoint3D_Plane3D.c  gmPoint3D_Vector3D.c  gmPoint_Arrow.c  gmPoint_Box.c  gmPoint_Point.c  gmPoint_ScalarPoint.c  gmPoint_Sphere.c  gmPoint_Vector.c  gmSimplex  gmSimplex.h  gmSimplex_Simplex.c  gmSimplex_Tetrahedron.c  gmStaticProc_GM_Static1_.c  gmStaticProc_GM_Static_.c  gmSubSpace_Plane.c  gmglobal.h  gmmatrix.h  gmpoint.c  gmpoint.h  gmpoint2d.h  gmstream.cpp  gmstream.h
src/glsl/: phong.frag  phong.vert
src/opencl/: CMakeLists.txt  gmcommandqueue.cpp  gmcommandqueue.h  gmevent.cpp  gmevent.h  gmeventbase.h  gmkernel.cpp  gmkernel.h  gmmemory.h  gmopencl.cpp  gmopencl.h  gmprogram.cpp  gmprogram.h  gmsampler.cpp  gmsampler.h
src/opengl/: CMakeLists.txt  gmGLMatrix.cpp  gmGLMatrix.h  gmGLProgram.cpp  gmGLShaderManager.cpp  gmGLShaderManager.h  gmOpenGL  gmOpenGL.h  gmbufferobject.cpp  gmbufferobject.h  gmframebufferobject.cpp  gmframebufferobject.h  gmglmatrix.cpp  gmglmatrix.h  gmglobject.h  gmglprogram.cpp  gmglprogram.h  gmglshader.cpp  gmglshader.h  gmglshadermanager.cpp  gmglshadermanager.h  gmindexbufferobject.cpp  gmindexbufferobject.h  gmobject.cpp  gmobject.h  gmopengl.cpp  gmopengl.h  gmopenglmanager.cpp  gmopenglmanager.h  gmprogram.cpp  gmprogram.h  gmrenderbufferobject.cpp  gmrenderbufferobject.h  gmshader.cpp  gmshader.h  gmtexture.cpp  gmtexture.h  gmuniformbufferobject.cpp  gmuniformbufferobject.h  gmvertexbufferobject.cpp  (+1 more)
src/parametrics/: CMakeLists.txt  gmPArc  gmPArc.h  gmPAsteroidalSphere  gmPBSplineCurve.h  gmPBenthorns  gmPBenthorns.c  gmPBezierTriangle.h  gmPBottle8.c  gmPButterfly.c  gmPCurve.h  gmPCurveContoursVisualizer  gmPCurveDefaultVisualizer  gmPCurveDerivativesVisualizer  gmPCurveDerivativesVisualizer.c  gmPCurveDerivativesVisualizer.h  gmPCurvePointsVisualizer  gmPCurvePointsVisualizer.h  gmPCurveVisualizer.c  gmPDiniSurface.h  gmPERBSCurve.h  gmPEnnepersSurface.c  gmPHeart.c  gmPHermiteSurface.c  gmPInsideOutTorus.h  gmPKleinsBottle  gmPMoebiusStrip.c  gmPMoebiusStrip.h  gmPRoseCurve.h  gmPSeashell.c  gmPSinSurface.c  gmPSinSurface.h  gmPSphere  gmPSphere.c  gmPSurf  gmPSurf.c  gmPSurf.h  gmPSurfContoursVisualizer  gmPSurfContoursVisualizer.c  gmPSurfContoursVisualizer.h  (+15 more)
src/scene/: CMakeLists.txt  gmdisplayobject.cpp  gmdisplayobject.h  gmfrustum.h  gmscaleobject.h  gmscene.cpp  gmscene.h  gmsceneobject.cpp  gmsceneobject.h  gmvisualizer.cpp  gmvisualizer.h
src/scenegraph/: gmCamera  gmCamera.h  gmCameraIso  gmCameraIso.c  gmCameraIso.cpp  gmDisplay  gmDisplayObject.h  gmFrustum.c  gmFrustum.h  gmLight.h  gmLight_PointLight.c  gmLight_SpotLight.c  gmLight_Sun.c  gmScaleObject  gmScaleObject.c  gmScaleObject.h  gmScene  gmScene.c  gmScene.cpp  gmScene.h  gmSceneObject.h  gmVisualizer  gmVisualizer.h  gmVisualizerStdRep  gmVisualizerStdRep.cpp  gmVisualizerStdRep.h  gmWindow  gmWindow_View.cpp  gmdisplayobject.cpp  gmdisplayobject.h  gmfrustum.h  gmscaleobject.h  gmscene.cpp  gmscene.h  gmsceneobject.cpp  gmsceneobject.h
src/scenegraphutils/: gmArrow3D.h  gmColor  gmCoordinateSystem.h  gmLightG.h  gmMaterial.h  gmPathTrack.h  gmSelector  gmSelectorGridVisualizer  gmSelectorGridVisualizer.c  gmTexture  gmTexture.cpp
src/script/: gmscript.cpp  gmscript.h
src/stereolithography/: CMakeLists.txt  gmstlobject.cpp  gmstlobject.h
src/testutils/: gmtestutils.h
src/trianglesystem/: CMakeLists.txt  gmTriangleFacetsDefaultVisualizer  gmTriangleFacetsDefaultVisualizer.h  gmTriangleFacetsVisualizer  gmTriangleFacetsVisualizer.c  gmTriangleSystem  gmTriangleSystem_TSTriangle.c  gmTriangleSystem_TSVertex.c  gmTriangleSystem_TriangleFacets.c  gmtrianglesystem.c  gmtrianglesystem.h
src/utils/: gmScript  gmScript_LuaScript.cpp  gmScript_Script.cpp  gmSortObject  gmSortObject.h  gmStream  gmStream_Separator.cpp  gmString  gmTimer.c  gmUtils
src/wavelet/: CMakeLists.txt  gmdwt.c  gmdwt.h  gmfilter.c  gmfilter.h  gmindex.h  gmorthofilter.c  gmorthofilter.h
src/window/: CMakeLists.txt  gmWindow_GMWindow.c  gmWindow_ViewBorder.c  gmWindow_ViewSet.cpp  gmview.h  gmviewset.cpp  gmviewset.h  gmwindow.cpp  gmwindow.h
(+869 files in other folders)
